Login Activity enhancements. Display post pop up only in the first Post.

--- a/Soloud/app/src/main/res/values/strings.xml
+++ b/Soloud/app/src/main/res/values/strings.xml
@@ -129,5 +129,7 @@
     <string name="error_requesting_contests">Could not load Contests</string>
     <string name="error_login_facebook">Facebook login attempt failed</string>
     <string name="please_try_again">Please try again</string>
+    <string name="terms_and_privacy_policy"><![CDATA[By signing up, you agree to our
+        <u>Terms</u> & <u>Privacy Policy</u>.]]></string>
 
 </resources>
