Training grid view. Bug fix: drawer type custom in themes.

--- a/Soloud/app/src/main/res/values/strings.xml
+++ b/Soloud/app/src/main/res/values/strings.xml
@@ -134,5 +134,6 @@
         <u>Terms</u> & <u>Privacy Policy</u>.]]></string>
     <string name="loading">Loading..</string>
     <string name="promo_text">Sign up and be the face \n of famous brands</string>
+    <string name="unlock_trainings">Make posts to unlock trainings</string>
 
 </resources>
