Google Places API added. Get place id in Post Activity.

--- a/Soloud/app/src/main/res/values/strings.xml
+++ b/Soloud/app/src/main/res/values/strings.xml
@@ -146,6 +146,7 @@
     <string name="training_title_story">Put a story behind the image</string>
     <string name="training_narration_1">Narration 1</string>
     <string name="training_narration_2">Narration 2</string>
+    <string name="add_your_location">Add your location</string>
 
 
 </resources>
